--- a/index.html
+++ b/index.html
@@ -1,24 +1,50 @@
 <!doctype html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rock Paper Scissors</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"> -->
+  <link href="https://fonts.googleapis.com/css?family=Asap:400,500,600,700" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container">
-        <div class="header">
-            Rock Paper Scissors
-        </div>
-        <div class="content">
+  <div class="container">
+    <header>
+      <h1> Rock Paper Scissors </h1>
+    </header>
+    <div class="content">
+      <div class="score-board">
+        <div id="user-label" class="badge">User</div>
+        <div id="comp-label" class="badge">Comp</div>
+        <span id="user-score"> 0 </span> :
+        <span id="comp-score"> 0 </span>
+      </div>
 
+      <div class="result">
+        <p> Paper cover rock! you lose! </p>
+      </div>
 
+      <div class="choices">
+        <div id="r" class="choice">
+          <i class="fas fa-hand-rock"></i>
         </div>
+        <div id="p" class="choice">
+          <i class="fas fa-hand-paper"></i>
+        </div>
+        <div id="s" class="choice">
+          <i class="fas fa-hand-scissors"></i>
+        </div>
+      </div>
+
+      <div class="action-msg">
+        Make your move
+      </div>
+
     </div>
-    <script src="main.js"></script>
+  </div>
+  <script src="main.js"></script>
 </body>
 
 </html>
