--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
       </div>
 
       <div class="choices">
-        <div id="r" class="choice">
+        <span id="r" class="choice">
           <i class="fas fa-hand-rock"></i>
-        </div>
-        <div id="p" class="choice">
+        </span>
+        <span id="p" class="choice">
           <i class="fas fa-hand-paper"></i>
-        </div>
-        <div id="s" class="choice">
+        </span>
+        <span id="s" class="choice">
           <i class="fas fa-hand-scissors"></i>
-        </div>
+        </span>
       </div>
 
-      <div class="action-msg">
+      <div id="action-msg" class="action-msg">
         Make your move
       </div>
 
