--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span id="comp-score"> 0 </span>
       </div>
 
-      <div class="result">
+      <div id="result" class="result">
         <p> Paper cover rock! you lose! </p>
       </div>
 
