--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
       </div>
 
     </div>
+    <footer>
+      Made by <a href="https://linkedin.com/in/imvpn22/" target="_blank"> Vipin </a> |
+      <a href="https://youtu.be/jaVNP3nIAv0" target="_blank"> Reference </a> |
+      <a href="https://github.com/imvpn22/rock-paper-scissors" target="_blank"> Code </a>
+    </footer>
   </div>
   <script src="main.js"></script>
 </body>
